# Price-Tracker-with-Telegram-Alerts

./: .gitignore  Dockerfile  README.md  docker-compose.yml  price_server.sh  pyproject.toml  requirements.txt
app/src/: celery_app.py  link_scraping.py  main.py  settings.py
app/src/celery_tasks/: tasks.py
app/src/telegram/: tele.py
