[tool.poetry]
name = "pricetrackerbot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = ">=0.111.1,<0.112.0"
uvicorn = ">=0.30.3,<0.31.0"
pydantic-settings = ">=2.4.0,<2.5.0"
sqlalchemy = ">=2.0.31,<2.1.0"
alembic = ">=1.13.2,<1.14.0"
redis = ">=5.0.8,<5.1.0"
celery = ">=5.4.0,<5.5.0"
requests = ">=2.32.3,<2.33.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
